Cleanup change generated by [] ([] to directories third_party/java_src/soy/javatests/com/google/... with template java/com/google/devtools/javatools/refactory/[]/cleanups:TruthMigration
GITHUB_BREAKING_CHANGES=none

-------------
Created by MOE: https://github.com/google/moe
MOE_MIGRATED_REVID=183272484